# shell-code

./: .env.example  .gitattributes  API_CONFIG.md  CANKAO.md  CVE_MATCHING_ARCHITECTURE.md  QUICKSTART.md  README.md  langgraph.json  main.py  main_with_hint.py  pyproject.toml  run.ps1
.claude/: settings.local.json
benchmarks/: README.md  arena_runtime_targets.example.json  known_cve_targets.example.json  known_cve_targets.json  vulhub_known_cve_targets.generated.json
docker/: Dockerfile
frontend/: README.md  package-lock.json  package.json
images/: Mermaid 流程图代码.md
intermediate_process/: README.md
reports/: 20260423_103539-http_127_0_0_1_8080-未发现明确漏洞-未验证.docx  20260423_103539-http_127_0_0_1_8080-未发现明确漏洞-未验证.md  20260423_105652-http_127_0_0_1_8080-未发现明确漏洞-未验证.docx  20260423_105652-http_127_0_0_1_8080-未发现明确漏洞-未验证.md  20260423_111523-http_127_0_0_1_8080-未发现明确漏洞-未验证.docx  20260423_111523-http_127_0_0_1_8080-未发现明确漏洞-未验证.md  20260423_143508-http_127_0_0_1_8080-CVE-2010-1870_远程代码执行-未验证.docx  20260423_143508-http_127_0_0_1_8080-CVE-2010-1870_远程代码执行-未验证.md  20260423_152345-http_127_0_0_1_8080-未发现明确漏洞-未验证.docx  20260423_152345-http_127_0_0_1_8080-未发现明确漏洞-未验证.md  20260423_170453-http_127_0_0_1_8080-未发现明确漏洞-未验证.docx  20260423_170453-http_127_0_0_1_8080-未发现明确漏洞-未验证.md  20260423_180052-http_127_0_0_1_8080-未发现明确漏洞-未验证.docx  20260423_180052-http_127_0_0_1_8080-未发现明确漏洞-未验证.md  20260423_190150-http_127_0_0_1_8080-未发现明确漏洞-未验证.docx  20260423_190150-http_127_0_0_1_8080-未发现明确漏洞-未验证.md  20260423_193903-http_127_0_0_1_8080-CVE-2017-5638_远程代码执行-已验证.docx  (+1 more)
scripts/: evaluate_reports.py  (+10 more)
(+157 files in other folders)
